Unify Java and Scala types for transparent vector computation.
Simple tests are running, but we'll need to split these out into Laws at some point.